--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm test mocha",
     "lesgo": "node index.js",
-    "dev": "nodemon index.js" 
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "node_ex"
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.4",
+    "cors": "^2.8.5",
     "dog-names": "^2.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
