--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Alan Albuquerque F. Lopes",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "cors": "^2.8.5",
     "dog-names": "^2.0.0",
