--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "dog-names": "^2.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "lint": "^0.7.0",
     "mocha": "^9.1.1"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
     "nodemon": "^2.0.12"
   }
 }
